<package format="2">
  <name>dh_gripper</name>
  <version>0.0.0</version>
  <description>
    The dh_gripper package
  </description>
  <license>BSD</license>

  <maintainer email="jiesun@todo.todo">jiesun</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  <!-- Catkin Dependencies -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>serial</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>message_generation</depend>
  <!-- System Dependencies -->
  <depend>boost</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
