<package format="2">
  <name>dh_hardware_interface</name>
  <version>0.0.0</version>
  <description>
    The dh_hardware_interface package
  </description>
  <license>TODO</license>

  <maintainer email="nicola@sysdesign.it">Nicola Conti</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- Catkin Dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>serial</depend>
  <!-- System Dependencies -->
  <depend>boost</depend>

</package>
