<package format="2">
  <name>dh_controller</name>
  <version>0.0.0</version>
  <description>
    The dh_controller package
  </description>
  <license>BSD</license>

  <maintainer email="jiesun@todo.todo">jiesun</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  <!-- Catkin Dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>serial</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>message_generation</depend>
  <!-- System Dependencies -->
  <depend>boost</depend>

</package>
